RESOLVED FIXED225794
[REGRESSION: r271876] Web Inspector: [Cocoa] Remote inspection crashes when using WEB_THREAD
https://bugs.webkit.org/show_bug.cgi?id=225794
Summary [REGRESSION: r271876] Web Inspector: [Cocoa] Remote inspection crashes when u...
Patrick Angle
Reported 2021-05-13 17:49:45 PDT
Attachments
Patch v1.0 (1.73 KB, patch)
2021-05-13 18:00 PDT, Patrick Angle
no flags
Patrick Angle
Comment 1 2021-05-13 18:00:40 PDT
Created attachment 428586 [details] Patch v1.0
Devin Rousso
Comment 2 2021-05-13 18:05:32 PDT
Comment on attachment 428586 [details] Patch v1.0 rs=me
EWS
Comment 3 2021-05-13 19:14:00 PDT
Committed r277477 (237712@main): <https://commits.webkit.org/237712@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428586 [details].
Note You need to log in before you can comment on or make changes to this bug.